add_subdirectory(lib)
add_subdirectory(bin)

include(GNUInstallDirs)

install(
  TARGETS ${SPORE_CODEGEN_BIN} ${SPORE_CODEGEN_LIB}
  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)

install(
  DIRECTORY ${PROJECT_SOURCE_DIR}/cmake/
  DESTINATION ${CMAKE_INSTALL_PREFIX}/cmake
  FILES_MATCHING PATTERN "**.cmake"
)

install(
  DIRECTORY ${PROJECT_SOURCE_DIR}/include/
  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
  FILES_MATCHING
  PATTERN "*.hpp"
)